# EDA_Assignment

./: README.md  main.py  pyproject.toml
notebook/: ex_1.ipynb  ex_2.ipynb
